--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -131,7 +131,7 @@ jobs:
       - run:
           name: Install deps
           command: yarn
-      - pulumi/preview:
+      - pulumi/update:
           stack: topmonks-webs
 
   deploy-prodeti-topmonks-cz:
