--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,7 +140,8 @@ jobs:
             git config credential.helper 'cache --timeout=120'
             git config user.email "robot@topmonks.com"
             git config user.name "Deployment Bot"
-            git status -s | grep .pulumi && git commit --allow-empty -am "[skip ci] Updated Pulumi stack state"
+            git add -A
+            git commit -m "[skip ci] Pulumi checkpoint"
             # Push quietly to prevent showing the token in log
             git push -q https://${GITHUB_BOT_TOKEN}@github.com/topmonks/topmonks-webs.git master
 
