--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,7 +90,7 @@ jobs:
       - checkout
       - run:
           name: Create Pulumi state folder
-          command: mkdir .pulumi
+          command: mkdir -p .pulumi
       - run:
           name: Fetch Pulumi state from S3
           command: aws s3 sync s3://topmonks-pulumi-state/ .pulumi/
@@ -122,16 +122,6 @@ jobs:
       - pulumi/update:
           stack: topmonks-webs
           skip-preview: true
-      - run:
-          name: Store updated Pulumi state
-          command: |
-            git config credential.helper 'cache --timeout=120'
-            git config user.email "robot@topmonks.com"
-            git config user.name "Deployment Bot"
-            git add -A
-            git commit -m "[skip ci] Pulumi checkpoint"
-            # Push quietly to prevent showing the token in log
-            git push -q https://${GITHUB_BOT_TOKEN}@github.com/topmonks/topmonks-webs.git master
       - persist_to_workspace:
           root: .
           paths: .pulumi
@@ -223,18 +213,19 @@ workflows:
   build_and_deploy:
     jobs:
       - build
-      - provision:
+      - pre-provision:
           context: org-global
           filters:
             branches:
               only: master
+      - provision:
+          context: org-global
+          requires:
+            - pre-provision
       - post-provision:
           context: org-global
           requires:
             - provision
-          filters:
-            branches:
-              only: master
       - test-www-topmonks-com:
           requires:
             - build
