--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v2-dependencies-
 
-      - run: yarn install
+      - run: yarn install --link-duplicates --no-progress
       - save_cache:
           paths:
             - node_modules
