--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "license": "MIT",
   "dependencies": {
     "@material/layout-grid": "^0.41.0",
-    "@pulumi/pulumi": "latest",
-    "@pulumi/aws": "latest"
+    "@pulumi/aws": "latest",
+    "@pulumi/pulumi": "latest"
   },
   "devDependencies": {
     "ava": "^0.25.0",
@@ -27,6 +27,7 @@
     "http-server": "^0.11.1",
     "lighthouse": "^3.2.1",
     "marked": "^0.5.2",
+    "natives": "1.1.6",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.15.3",
     "stylelint": "^9.9.0",
