Updated to latest Blendid

--- a/www.topmonks.com/config/path-config.json
+++ b/www.topmonks.com/config/path-config.json
@@ -2,6 +2,11 @@
   "src": "./www.topmonks.com/src",
   "dest": "./public/www.topmonks.com",
 
+  "data": {
+    "team": "data/team",
+    "dest": "./data"
+  },
+
   "html": {
     "src": "html",
     "dest": "./"
