--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@pulumi/pulumi": "<=1.0"
   },
   "devDependencies": {
-    "ava": "^1.2.1",
     "@topmonks/blendid": "git://github.com/topmonks/blendid.git",
+    "ava": "^1.2.1",
     "bluebird": "^3.5.2",
     "broken-link-checker-local": "^0.2.0",
     "chalk": "^2.4.2",
@@ -23,11 +23,11 @@
     "eslint-plugin-prettier": "^3.0.1",
     "gulp-markdown-to-json": "^1.1.0",
     "gulp-merge-json": "^1.3.1",
-    "gulp-watch": "^5.0.1",
     "http-server": "^0.11.1",
     "lighthouse": "^4.1.0",
     "marked": "^0.6.0",
     "natives": "1.1.6",
+    "node-sass-glob-importer": "^5.3.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.16.4",
     "stylelint": "^9.10.1",
