--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,6 +223,17 @@ jobs:
       AWS_CLOUDFRONT_DISTRIBUTION_ID: E2EF8JLZURG0RI
       HOST: www.hookamonk.com
 
+  test-www-xduediligence-com:
+    <<: *test-site
+    environment:
+      HOST: www.xduediligence.com
+
+  deploy-www-xduediligence-com:
+    <<: *s3-deploy
+    environment:
+      AWS_CLOUDFRONT_DISTRIBUTION_ID: EEZYVPS6MGJ5A
+      HOST: www.xduediligence.com
+
   deploy-xixo-demo-topmonks-com:
     <<: *s3-deploy
     environment:
