--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -289,6 +289,17 @@ workflows:
           filters:
             branches:
               only: master
+      - test-www-xduediligence-com:
+          requires:
+            - build
+      - deploy-www-xduediligence-com:
+          context: org-global
+          requires:
+            - provision
+            - test-www-xduediligence-com
+          filters:
+            branches:
+              only: master
       - deploy-prodeti-topmonks-cz:
           context: org-global
           requires:
