--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,6 +162,17 @@ jobs:
     environment:
       HOST: studio.topmonks.com
 
+  deploy-monkstage-topmonks-com:
+    <<: *s3-deploy
+    environment:
+      AWS_CLOUDFRONT_DISTRIBUTION_ID: E6S8YGG74H6RZ
+      HOST: monkstage.topmonks.com
+
+  test-monkstage-topmonks-com:
+    <<: *test-site
+    environment:
+      HOST: monkstage.topmonks.com
+
   deploy-studio-topmonks-com:
     <<: *s3-deploy
     environment:
@@ -212,6 +223,17 @@ jobs:
       AWS_CLOUDFRONT_DISTRIBUTION_ID: E2EF8JLZURG0RI
       HOST: www.hookamonk.com
 
+  test-www-xduediligence-com:
+    <<: *test-site
+    environment:
+      HOST: www.xduediligence.com
+
+  deploy-www-xduediligence-com:
+    <<: *s3-deploy
+    environment:
+      AWS_CLOUDFRONT_DISTRIBUTION_ID: E3CP5QY5Q88VXM
+      HOST: www.xduediligence.com
+
   deploy-xixo-demo-topmonks-com:
     <<: *s3-deploy
     environment:
@@ -244,6 +266,9 @@ workflows:
       - test-studio-topmonks-com:
           requires:
             - build
+      - test-monkstage-topmonks-com:
+          requires:
+            - build
       - test-www-topmonks-cz:
           requires:
             - build
@@ -261,6 +286,18 @@ workflows:
           requires:
             - provision
             - test-www-hookamonk-com
+          filters:
+            branches:
+              only: master
+      - test-www-xduediligence-com:
+          requires:
+            - build
+      - deploy-www-xduediligence-com:
+          context: org-global
+          requires:
+            - provision
+            #- test-www-xduediligence-com
+            - build
           filters:
             branches:
               only: master
@@ -293,6 +330,14 @@ workflows:
           requires:
             - provision
             - test-blockchain-topmonks-com
+          filters:
+            branches:
+              only: master
+      - deploy-monkstage-topmonks-com:
+          context: org-global
+          requires:
+            - provision
+            - test-monkstage-topmonks-com
           filters:
             branches:
               only: master
