V2 of XIXOIO webu - html + css

--- a/package.json
+++ b/package.json
@@ -79,6 +79,9 @@
     "test:broken-links:monkstage.topmonks.com": "blcl ./public/monkstage.topmonks.com -ro --exclude linkedin.com --exclude maps.googleapis.com --exclude insight.topmonks.com/avatar/ --exclude caffe.topmonks.cz --exclude blog.topmonks.com",
     "start:www.xduediligence.com": "BLENDID_CONFIG_PATH=./www.xduediligence.com/config/ blendid",
     "build:www.xduediligence.com": "BLENDID_CONFIG_PATH=./www.xduediligence.com/config/ blendid -- build",
-    "test:broken-links:www.xduediligence.com": "blcl ./public/www.xduediligence.com -ro --exclude linkedin.com --exclude maps.googleapis.com --exclude insight.topmonks.com/avatar/ --exclude caffe.topmonks.cz --exclude blog.topmonks.com"
+    "test:broken-links:www.xduediligence.com": "blcl ./public/www.xduediligence.com -ro --exclude linkedin.com --exclude maps.googleapis.com --exclude insight.topmonks.com/avatar/ --exclude caffe.topmonks.cz --exclude blog.topmonks.com",
+    "start:xixoio.topmonks.com": "BLENDID_CONFIG_PATH=./xixoio.topmonks.com/config/ blendid",
+    "build:xixoio.topmonks.com": "BLENDID_CONFIG_PATH=./xixoio.topmonks.com/config/ blendid -- build",
+    "test:broken-links:xixoio.topmonks.com": "blcl ./public/xixoio.topmonks.com -ro --exclude linkedin.com --exclude maps.googleapis.com --exclude insight.topmonks.com/avatar/ --exclude caffe.topmonks.cz --exclude blog.topmonks.com"
   }
 }
