--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "license": "MIT",
   "dependencies": {
     "@material/layout-grid": "^0.41.0",
-    "@pulumi/aws": "<=1.0",
-    "@pulumi/pulumi": "<=1.0",
+    "@pulumi/aws": "^0.17.1",
+    "@pulumi/pulumi": "^0.17.1",
     "@fortawesome/fontawesome-free": "5.7.2",
     "bootstrap": "4.3.1",
     "jquery": "3.3.1",
